em_2layer and flow_2layer are constructed and checked no error

--- a/tmtgem/src_post/.gitignore
+++ b/tmtgem/src_post/.gitignore
@@ -1,14 +1,4 @@
-*.dat
-*.pos
-*.geo
-*.msh 
-topo.xyz
-topo.grd 
-*.ps 
-*.gmt 
-gmt.history 
-a.out
-*.sh
-*.pdf
-!clean.sh
-!tetmeshgen.sh
+*.o
+*.mod
+*.exe
+sync*.sh
